# python-audio-separator

./: pyproject.toml
audio_separator/separator/: separator.py
audio_separator/separator/architectures/: mdxc_separator.py
