[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "audio-separator"
version = "0.41.1"
description = "Easy to use audio stem separation, using various models from UVR trained primarily by @Anjok07"
authors = [{ name = "Andrew Beveridge", email = "andrew@beveridge.uk" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = [
    "audio",
    "sound",
    "karaoke",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Mixers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests>=2",
    "numpy>=2",
    "librosa>=0.10",
    "samplerate==0.1.0",
    "six>=1.16",
    "torch>=2.3",
    "tqdm",
    "pydub>=0.25",
    "audioop-lts>=0.2.1 ; python_full_version >= '3.13' and python_full_version < '4'",
    "onnx-weekly",
    "onnx2torch-py313>=1.6",
    "julius>=0.2",
    "diffq-fixed>=0.2 ; sys_platform == 'win32'",
    "diffq>=0.2 ; sys_platform != 'win32'",
    "einops>=0.7",
    "pyyaml",
    "ml_collections",
    "resampy>=0.4",
    "beartype>=0.18.5,<0.19",
    "rotary-embedding-torch>=0.6.1,<0.7",
    "scipy>=1.13.0,<2",
    "soundfile>=0.12",
]

[project.optional-dependencies]
cpu = ["onnxruntime>=1.17"]
gpu = ["onnxruntime-gpu>=1.17"]
dml = [
    "onnxruntime-directml>=1.17",
    "torch_directml",
]

[project.urls]
Homepage = "https://github.com/karaokenerds/python-audio-separator"
Repository = "https://github.com/karaokenerds/python-audio-separator"
Documentation = "https://github.com/karaokenerds/python-audio-separator/blob/main/README.md"

[project.scripts]
audio-separator = "audio_separator.utils.cli:main"
audio-separator-remote = "audio_separator.remote.cli:main"

[dependency-groups]
dev = [
    "black>=23",
    "pytest",
    "pytest-cov>=4.1.0",
    "matplotlib>=3.8.0",
    "pillow>=10.1.0",
    "scikit-image>=0.22.0",
    "filetype>=1",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["audio_separator"]
module-root = ""
source-include = ["audio_separator/separator/models.json/**"]

[tool.black]
line-length = 140
